[metadata]
name = java_role
summary = Deployment of Java to bare metal
description-file =
    README.md
author = lordoftheflies
author-email = laszlo.hegedus@cherubits.hu
home-page = https://lordoftheflies.github.io/java_role/
classifier =
    Environment :: Ubuntu
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

# In below section we have to include the roles directory explicitly
# to Workaround PBR bug:
#     source prefix replaced globally, see:
#     https://bugs.launchpad.net/pbr/+bug/1810804
[files]
packages =
    java_role
data_files =
    share/java_role/ansible = ansible/*
    share/java_role/ansible/roles = ansible/roles/*
    share/java_role/docs = docs/*
    share/java_role/etc_templates = etc/*
    share/java_role = setup.cfg
    share/java_role = requirements.yml

[entry_points]
console_scripts=
    java_role = java_role.cmd.java_role:main
    java_role-vault-password-helper = java_role.cmd.java_role_vault_password_helper:main

java_role.cli=
    baremetal_compute_inspect = java_role.cli.commands:BaremetalComputeInspect
    baremetal_compute_manage = java_role.cli.commands:BaremetalComputeManage
    baremetal_compute_provide = java_role.cli.commands:BaremetalComputeProvide
    baremetal_compute_rename = java_role.cli.commands:BaremetalComputeRename
    baremetal_compute_update_deployment_image = java_role.cli.commands:BaremetalComputeUpdateDeploymentImage
    baremetal_compute_serial_console_enable = java_role.cli.commands:BaremetalComputeSerialConsoleEnable
    baremetal_compute_serial_console_disable = java_role.cli.commands:BaremetalComputeSerialConsoleDisable
    control_host_bootstrap = java_role.cli.commands:ControlHostBootstrap
    control_host_upgrade = java_role.cli.commands:ControlHostUpgrade
    configuration_dump = java_role.cli.commands:ConfigurationDump
    kolla_ansible_run = java_role.cli.commands:KollaAnsibleRun
    network_connectivity_check = java_role.cli.commands:NetworkConnectivityCheck
    overcloud_bios_raid_configure = java_role.cli.commands:OvercloudBIOSRAIDConfigure
    overcloud_container_image_build = java_role.cli.commands:OvercloudContainerImageBuild
    overcloud_container_image_pull = java_role.cli.commands:OvercloudContainerImagePull
    overcloud_database_backup = java_role.cli.commands:OvercloudDatabaseBackup
    overcloud_database_recover = java_role.cli.commands:OvercloudDatabaseRecover
    overcloud_deployment_image_build = java_role.cli.commands:OvercloudDeploymentImageBuild
    overcloud_deprovision = java_role.cli.commands:OvercloudDeprovision
    overcloud_hardware_inspect = java_role.cli.commands:OvercloudHardwareInspect
    overcloud_host_configure = java_role.cli.commands:OvercloudHostConfigure
    overcloud_host_package_update = java_role.cli.commands:OvercloudHostPackageUpdate
    overcloud_host_command_run = java_role.cli.commands:OvercloudHostCommandRun
    overcloud_host_upgrade = java_role.cli.commands:OvercloudHostUpgrade
    overcloud_introspection_data_save = java_role.cli.commands:OvercloudIntrospectionDataSave
    overcloud_inventory_discover = java_role.cli.commands:OvercloudInventoryDiscover
    overcloud_post_configure = java_role.cli.commands:OvercloudPostConfigure
    overcloud_provision = java_role.cli.commands:OvercloudProvision
    overcloud_service_configuration_save = java_role.cli.commands:OvercloudServiceConfigurationSave
    overcloud_service_configuration_generate = java_role.cli.commands:OvercloudServiceConfigurationGenerate
    overcloud_service_deploy = java_role.cli.commands:OvercloudServiceDeploy
    overcloud_service_deploy_containers = java_role.cli.commands:OvercloudServiceDeployContainers
    overcloud_service_destroy = java_role.cli.commands:OvercloudServiceDestroy
    overcloud_service_reconfigure = java_role.cli.commands:OvercloudServiceReconfigure
    overcloud_service_upgrade = java_role.cli.commands:OvercloudServiceUpgrade
    overcloud_swift_rings_generate = java_role.cli.commands:OvercloudSwiftRingsGenerate
    physical_network_configure = java_role.cli.commands:PhysicalNetworkConfigure
    playbook_run = java_role.cli.commands:PlaybookRun
    seed_container_image_build = java_role.cli.commands:SeedContainerImageBuild
    seed_deployment_image_build = java_role.cli.commands:SeedDeploymentImageBuild
    seed_host_configure = java_role.cli.commands:SeedHostConfigure
    seed_host_package_update = java_role.cli.commands:SeedHostPackageUpdate
    seed_host_command_run = java_role.cli.commands:SeedHostCommandRun
    seed_host_upgrade = java_role.cli.commands:SeedHostUpgrade
    seed_hypervisor_host_configure = java_role.cli.commands:SeedHypervisorHostConfigure
    seed_hypervisor_host_command_run = java_role.cli.commands:SeedHypervisorHostCommandRun
    seed_hypervisor_host_upgrade = java_role.cli.commands:SeedHypervisorHostUpgrade
    seed_service_deploy = java_role.cli.commands:SeedServiceDeploy
    seed_service_upgrade = java_role.cli.commands:SeedServiceUpgrade
    seed_vm_deprovision = java_role.cli.commands:SeedVMDeprovision
    seed_vm_provision = java_role.cli.commands:SeedVMProvision